--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     const SCHEDULE_COLLECTION = 'bianca_schedule_data';
     const CLIENTS_COLLECTION = 'bianca_clients_data';
 
-    // --- 圖示 (新增 Plane, PenTool) ---
+    // --- 圖示 (已將飛機旋轉角度) ---
     const Icons = {
       Menu: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="4" x2="20" y1="12" y2="12"/><line x1="4" x2="20" y1="6" y2="6"/><line x1="4" x2="20" y1="18" y2="18"/></svg>,
       X: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M18 6 6 18"/><path d="m6 6 18 18"/></svg>,
@@ -65,11 +65,10 @@
       Send: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>,
       UserPlus: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><line x1="20" x2="20" y1="8" y2="14"/><line x1="23" x2="17" y1="11" y2="11"/></svg>,
       Settings: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.47a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>,
-      // [新增] 飛機與筆
-      Plane: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M2 12h20"/><path d="M13 2l9 10-9 10"/><path d="M16 12V2"/><path d="M16 12v10"/><path d="M2 12l5-5"/><path d="M2 12l5 5"/></svg>, // 替換為更像飛機的圖示
-      PlaneSimple: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M2 12h20"/><path d="m19 5-7 7-7-7"/></svg>, // 這裡直接使用更像飛機的 path
-      PlaneReal: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M17.8 19.2 16 11l3.5-3.5C21 6 21.5 4 21 3c-1-.5-3 0-4.5 1.5L13 8 4.8 6.2c-.5-.1-.9.2-1.1.7l-1.2 4 6 3.2-2 2-4-1.5L1 16l7.4 1.6c.7.1 1.4-.1 1.9-.4l4.1-2.3 2.7.9c.5.2 1 .2 1.3-.1l.3-.4c.3-.5.1-1.1-.4-1.5z"/></svg>,
-      PenTool: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m12 19 7-7 3 3-7 7-3-3z"/><path d="m18 13-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"/><path d="m2 2 7.586 7.586"/><circle cx="11" cy="11" r="2"/></svg>
+      // 實心飛機 (已旋轉 45 度朝右上)
+      PlaneDoodle: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className={`w-6 h-6 -rotate-45 ${p.className || ''}`}><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>,
+      // 實心筆
+      PenDoodle: (p) => <svg {...p} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className={`w-6 h-6 ${p.className || ''}`}><path d="M21.731 2.269a2.625 2.625 0 00-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 000-3.712zM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 00-1.32 2.214l-.8 2.685a.75.75 0 00.933.933l2.685-.8a5.25 5.25 0 002.214-1.32L19.513 8.199z" /></svg>
     };
 
     const DoodleEye = ({ className }) => (<svg viewBox="0 0 100 60" className={className} fill="none" stroke="currentColor" strokeWidth="3" strokeLinecap="round"><path d="M10,40 Q50,10 90,40" /><path d="M20,28 L15,15" /><path d="M35,22 L32,8" /><path d="M50,20 L50,5" /><path d="M65,22 L68,8" /><path d="M80,28 L85,15" /></svg>);
@@ -712,13 +711,13 @@
                 </button>
               </div>
 
-              {/* [新增] 特殊狀態按鈕區 */}
+              {/* [新增] 特殊狀態按鈕區 (Grid layout for mobile) */}
               <div className="pt-2 border-t border-dashed border-stone-200">
                  <div className="text-[10px] text-stone-400 mb-1">📅 休假/特殊排程</div>
-                 <div className="flex gap-2">
-                    <button onClick={() => setSpecialStatus('abroad')} className="flex-1 bg-stone-100 text-stone-600 py-2 rounded-lg text-xs font-bold hover:bg-stone-200 flex items-center justify-center gap-1"><Icons.PlaneSimple size={14}/> 出國</button>
-                    <button onClick={() => setSpecialStatus('rest')} className="flex-1 bg-red-50 text-red-500 py-2 rounded-lg text-xs font-bold hover:bg-red-100">休息</button>
-                    <button onClick={() => setSpecialStatus('training')} className="flex-1 bg-indigo-50 text-indigo-500 py-2 rounded-lg text-xs font-bold hover:bg-indigo-100 flex items-center justify-center gap-1"><Icons.PenTool size={14}/> 進修</button>
+                 <div className="grid grid-cols-3 gap-2">
+                    <button onClick={() => setSpecialStatus('abroad')} className="bg-stone-100 text-stone-600 py-2 rounded-lg text-xs font-bold hover:bg-stone-200 flex items-center justify-center gap-1"><Icons.PlaneDoodle className="w-3.5 h-3.5"/> 出國</button>
+                    <button onClick={() => setSpecialStatus('rest')} className="bg-red-50 text-red-500 py-2 rounded-lg text-xs font-bold hover:bg-red-100">休息</button>
+                    <button onClick={() => setSpecialStatus('training')} className="bg-indigo-50 text-indigo-500 py-2 rounded-lg text-xs font-bold hover:bg-indigo-100 flex items-center justify-center gap-1"><Icons.PenDoodle className="w-3.5 h-3.5"/> 進修</button>
                  </div>
               </div>
 
@@ -825,9 +824,11 @@
 
       // [修改] 處理使用者點擊：如果是竹北協調時段或虛擬時段，直接跳警告
       const handleUserClick = (slot) => { 
-        // 檢查特殊狀態 (不開放預約)
+        // 檢查特殊狀態 (不開放預約) -> 但允許點擊以觀看狀態
         if (slot.type === 'abroad' || slot.type === 'rest' || slot.type === 'training') {
-           return; // 不做任何反應，或可 alert("本日休息")
+           // 強制刷新選中的 slot，讓下方顯示對應訊息
+           setSelectedSlot(slot);
+           return; 
         }
 
         // 判斷是否為虛擬時段(isVirtual) 或 顯式的竹北協調時段
@@ -914,7 +915,7 @@
                const isFull = hasSpecificSlots && !specialSlot && !dateSlots.some(s => s.status === 'open');
 
                return (
-                 <button key={d} onClick={() => setSelectedDate(dateObj)} disabled={isPast || !!specialSlot}
+                 <button key={d} onClick={() => { setSelectedDate(dateObj); /* 觸發特殊狀態更新 */ if(specialSlot) handleUserClick(specialSlot); }} disabled={isPast}
                    className={`aspect-square rounded-full flex flex-col items-center justify-center relative transition ${isSelected ? 'bg-[#dcb5bc] text-white shadow-md' : 'hover:bg-stone-100 text-stone-600'} ${isPast ? 'opacity-50 cursor-not-allowed' : ''} ${specialSlot ? 'cursor-not-allowed' : ''}`}
                  >
                    <span className={`text-sm font-medium relative`}>{d}</span>
@@ -940,9 +941,9 @@
                    {/* [新增] Special Status Overlay */}
                    {!isPast && specialSlot && (
                      <div className="absolute inset-0 flex items-center justify-center rounded-full bg-white/80">
-                       {specialSlot.type === 'abroad' && <Icons.PlaneReal className="text-stone-500 w-5 h-5" />}
+                       {specialSlot.type === 'abroad' && <Icons.PlaneDoodle className="text-stone-500 w-5 h-5" />}
                        {specialSlot.type === 'rest' && <span className="text-red-500/80 font-bold text-sm">休</span>}
-                       {specialSlot.type === 'training' && <Icons.PenTool className="text-indigo-500 w-4 h-4" />}
+                       {specialSlot.type === 'training' && <Icons.PenDoodle className="text-indigo-500 w-4 h-4" />}
                      </div>
                    )}
 
@@ -971,15 +972,25 @@
                     if (specialSlot) {
                        let label = '';
                        let icon = null;
-                       if(specialSlot.type === 'abroad') { label = '出國 (暫停預約)'; icon = <Icons.PlaneReal size={20} className="text-stone-400"/>; }
-                       if(specialSlot.type === 'rest') { label = '本日休息'; icon = <span className="text-lg font-bold text-red-400">休</span>; }
-                       if(specialSlot.type === 'training') { label = '進修日 (暫停預約)'; icon = <Icons.PenTool size={18} className="text-indigo-400"/>; }
+                       // [修改] 特殊狀態的顯示文字與圖案
+                       if(specialSlot.type === 'abroad') { 
+                           label = '出國放風去!回訊息會比較慢'; 
+                           icon = <Icons.PlaneDoodle className="w-8 h-8 text-stone-400 mb-2"/>; 
+                       }
+                       if(specialSlot.type === 'rest') { 
+                           label = '本日休息'; 
+                           icon = <span className="text-3xl font-bold text-red-400 mb-2">休</span>; 
+                       }
+                       if(specialSlot.type === 'training') { 
+                           label = '我又去進修了!下課才會回訊息'; 
+                           icon = <Icons.PenDoodle className="w-8 h-8 text-indigo-400 mb-2"/>; 
+                       }
 
                        return (
-                          <div className="bg-stone-100 border border-stone-200 rounded-xl p-6 flex flex-col items-center justify-center text-stone-500 gap-2">
+                          <div className="bg-white border-2 border-dashed border-stone-300 rounded-2xl p-8 flex flex-col items-center justify-center text-stone-500">
                              {icon}
-                             <span className="font-bold">{label}</span>
-                             {isAdmin && <button onClick={() => removeSlot(specialSlot)} className="text-xs text-red-400 underline mt-2">移除此狀態</button>}
+                             <span className="font-bold text-lg text-center">{label}</span>
+                             {isAdmin && <button onClick={() => removeSlot(specialSlot)} className="text-xs text-red-400 underline mt-4 bg-red-50 px-3 py-1 rounded-full">移除此狀態</button>}
                           </div>
                        );
                     }
@@ -1273,9 +1284,6 @@
               </HandDrawnBorder>
             </section>
           </main>
-
-          {/* [新增] 渲染預約查詢視窗 */}
-          <ReservationLookupModal isOpen={isLookupOpen} onClose={() => setIsLookupOpen(false)} />
 
           <footer className="bg-stone-100 py-8 text-center text-stone-400 text-sm">
             <DoodleEye className="w-6 h-4 mx-auto mb-2 opacity-50" />
