--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
               <path d="M10,30 Q50,55 90,30" />
               <circle cx="50" cy="30" r="8" />
               <path d="M20,22 L15,10" /><path d="M35,16 L32,5" /><path d="M50,14 L50,2" /><path d="M65,16 L68,5" /><path d="M80,22 L85,10" />
+              
               {mode === 'bundle' ? (
                  <>
                    <line x1="50" y1="20" x2="50" y2="55" stroke="#b07d88" strokeWidth="3" />
@@ -501,7 +502,7 @@
           });
 
           if (copySuccess) {
-              alert("已自動複製預約格式！\n請跳轉至 LINE 後「貼上」並填寫傳送。\n\n⚠️ 闆娘小提醒：\n會盡可能安排時間，但如果真的喬不到可以配合的時間，很抱歉...也謝謝妳願意給我機會，希望未來還是能夠服務到妳❤️");
+              alert("🎉 預約資訊已複製！\n\n⚠️ 重要提醒：\n即將跳轉至 LINE，請務必在對話框直接「貼上」並「傳送」訊息，才算真正完成預約喔！");
           } else {
               alert("預約成功！時段已為您保留。\n(自動複製失敗) 請手動複製以下內容傳送給 LINE 客服：\n\n" + text);
           }
@@ -797,7 +798,7 @@
                   <div className="flex justify-between items-center mb-2">
                     <span className="font-bold text-lg">{searchResult.name}</span>
                     <div className="flex gap-1">
-                        {/* 顯示儲值會員徽章 */}
+                        {/* [新增] 顯示儲值會員徽章 */}
                         {searchResult.isStoreMember && <span className="bg-[#dcb5bc] text-white text-[10px] px-2 py-0.5 rounded-full flex items-center gap-1"><Icons.Crown className="w-3 h-3"/> 儲值會員</span>}
                         {searchResult.blacklist && <span className="bg-red-500 text-white text-[10px] px-2 py-0.5 rounded-full">黑名單</span>}
                     </div>
@@ -1274,6 +1275,14 @@
           target="核心鐵粉，預繳一年份費用"
           colorClass="border-yellow-400/50 bg-yellow-50/30"
         />
+
+        <div className="mt-3 bg-[#fff0f3] border border-[#dcb5bc] rounded-xl p-3 text-xs text-stone-600 flex items-start gap-2">
+            <Icons.Heart className="w-4 h-4 text-[#b07d88] shrink-0 mt-0.5" fill="#b07d88" />
+            <div>
+               <span className="font-bold text-[#b07d88]">儲值金方案備註：</span>
+               可以與家人朋友共享儲值金！請於當天結帳時做告知。
+            </div>
+        </div>
       </div>
     );
 
